<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signupToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        app:title="Sign Up"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        style="@style/Toolbar"

        />


    <!--ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginVertical="56"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >
        



        <EditText

            android:id="@+id/signupEmail"
            android:layout_width="311dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="no"
            android:background="@drawable/input_big"
            android:padding="10dp"
            android:elevation="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />


        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="311dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/input_big"
            android:elevation="50dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="311dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/input_big"
            android:elevation="50dp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:padding="10dp" />

        <RadioButton
            android:id="@+id/nurse"
            android:layout_width="311dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/professional_nurse"
            android:textColor="#ffffff"/>
        <RadioButton
            android:id="@+id/patient"
            android:layout_width="311dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:text="@string/elderly_patient"
            android:textColor="#ffffff"/>

<LinearLayout

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="14dp"
        android:text="next"
        android:gravity="center"
        android:layout_centerVertical="true"

        />
    <Button
        android:id="@+id/next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_next"
        android:gravity="center"
        android:layout_centerVertical="true"
        />


</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:text="@string/already_signed_up"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/signinPage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="#00BFA5"
            />


        </LinearLayout>

    </LinearLayout>
        </LinearLayout>
<!--/ScrollView-->



    <ProgressBar
        android:id="@+id/signupProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="50dp"
        android:visibility="gone" />




</LinearLayout>