<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nurse_Dashboard"
    android:background="@color/white"
    android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Care Professional's Profile"
            tools:layout_editor_absoluteX="3dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
         >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FirstNameIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            android:hint="Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstNameIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>




</com.google.android.material.textfield.TextInputLayout>




       <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/LastNameIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateFormat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        android:layout_centerVertical="true">
                    </com.google.android.material.textfield.TextInputEditText>




       </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateFormat"
                        android:hint="Phone Number"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneIE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="10"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/_role"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateFormat"
                        android:hint="Roles"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">


                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/role"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:inputType="none"
                            android:layout_centerVertical="true">
                        </com.google.android.material.textfield.MaterialAutoCompleteTextView>




                    </com.google.android.material.textfield.TextInputLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="25dp"
                            >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Specialized Areas"
                            android:padding="10dp"
                            android:inputType="none">

                        </TextView>

                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="69dp"
                            android:scrollbars="none">

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/specAreas"
                                android:layout_width="374dp"
                                android:layout_height="213dp"
                                android:padding="1sp"
                                app:singleLine="false"
                                app:singleSelection="false">

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/eol"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="150dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/end_of_life_care">


                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/pall"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="130dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/palliative_care">

                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/stroke"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="115dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/stroke_care">

                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/dem"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="130dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dementia_care">


                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/park"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="140dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/parkinson_s_care">

                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/can"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cancer_care">

                                </com.google.android.material.chip.Chip>

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/post"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/post_surgery_care">


                                </com.google.android.material.chip.Chip>
                            </com.google.android.material.chip.ChipGroup>
                        </HorizontalScrollView>

                    </LinearLayout>


                    <Button
                        android:id="@+id/submit"
                        android:layout_width="311dp"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:background="@drawable/btn_bg"
                        android:textColor="#FFFFFF"
                        android:layout_margin="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />

                </LinearLayout>

        </LinearLayout>

        </ScrollView>



</LinearLayout>